--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -26,7 +26,7 @@
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-    <title>MERN A to Z</title>
+    <title>Airline System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
